# multilayer-perceptron

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  codecov.yml  package-lock.json  package.json  wasm-pack.toml  webpack.config.js
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  wasm.yml
benches/: tensor_ops.rs
benches.disabled/: tensor_ops.rs
examples/: optimizer_comparison.rs  regularization_demo.rs  training_demo.rs
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: console-output.tsx  dataset-generator.tsx  dataset-selector.tsx  layer-control-panel.tsx  network-visualizer.tsx  neural-background.tsx  optimizer-panel.tsx  task-switcher.tsx  training-dashboard.tsx
frontend/hooks/: useMLTraining.ts  useWASM.ts
frontend/public/wasm/: multilayer_perceptron.d.ts  multilayer_perceptron.js
src/: dataset.rs  error.rs  generic_dataset.rs  graph.rs  layers.rs  lib.rs  loss.rs  metrics.rs  ops.rs  optimizer.rs  tensor.rs  trainer.rs  wasm.rs
src/adapters/: mod.rs
src/adapters/data/: base_csv_loader.rs  boston_housing_loader.rs  breast_cancer_loader.rs  csv_repo.rs  generic_repo.rs  iris_loader.rs  mod.rs
src/adapters/presentation/: mod.rs
src/adapters/presentation/native/: mod.rs  visualizer.rs
src/adapters/presentation/wasm/: bindings.rs
src/app/: config.rs  facade.rs  mlp.rs  mod.rs
src/core/: graph.rs  mod.rs  ops.rs  tensor.rs
src/domain/: mod.rs  ports.rs  types.rs
src/domain/models/: layer.rs  mlp.rs  mod.rs
src/domain/services/: loss.rs  metrics.rs  mod.rs  optimizer.rs
src/usecase/: evaluate.rs  mod.rs  predict_mlp.rs  preprocess.rs  train_mlp.rs
www/: index.html  index.js  style.css
