[package]
name = "multilayer-perceptron"
version = "0.1.0"
edition = "2025"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
rand = "0.8"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# WASM specific dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
